--- a/index.html
+++ b/index.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Boxes</title>
-<link rel="stylesheet" type="text/css" href="analog.css">
-</head>
+	<title>Boxes</title>
+	<link rel="stylesheet" type="text/css" href="analog.css"> </head>
 
 <body>
-<div id="page">
-    <div id="title">
-    <h1>KaoStatic</h1>
-</div>
-<div id="extra">
-    <h1>INSTRUMENTAL</h1>
-</div>
-<div id="logo">
-<img src="images/opera_raCHTCSGFh.png" alt="The Analog Specialists" />
-</div>
-<ul id="naviga3on">
-<li><a href="#" class="on">Home</a></li>
-<li><a href="#">For Sale</a></li>
-<li><a href="#">Repairs</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Contact</a></li>
-</ul>
-<p>
-    <div id="bright">
-<img src="images/keys.jpg" alt="Fender Rhodes, Hohner Clavinet,and Wurlitzer EP200" />
-    </div>
-</p>
-<p>
-We specialize in the sale and repair of classic keyboards, in
-
-particular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet.
-</p>
-<div id="piano">
-<img src="images/piano.png">
-</div>
-
-
-
-</div>
+	<div id="page">
+		<div class="size">
+			<div id="title">
+				<h1>KaoStatic</h1> </div>
+			<div class="glitch" data-text="Static">Static</div>
+			<div id="extra">
+				<h1>INSTRUMENTAL</h1> </div>
+			<div id="logo"> <img src="images/opera_raCHTCSGFh.png" alt="The Analog Specialists" /> </div>
+			<ul id="naviga3on">
+				<li><a href="#" class="on">Home</a></li>
+				<li><a href="#">For Sale</a></li>
+				<li><a href="#">Repairs</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+			<p>
+				<div id="bright"> <img src="images/keys.jpg" alt="Fender Rhodes, Hohner Clavinet,and Wurlitzer EP200" /> </div>
+			</p>
+			<p> We specialize in the sale and repair of classic keyboards, in particular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet. </p>
+		</div>
 </body>
+
 </html>
