--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div id="page">
 		<div class="size">
 			<div id="title">
-				<h1>KaoStatic</h1> </div>
+				<h1>Kao</h1> </div>
 			<div class="glitch" data-text="Static">Static</div>
 			<div id="extra">
 				<h1>INSTRUMENTAL</h1> </div>
